@@ -1,3 +1,9 @@
+2010-07-16 Christian Kruse <cjk@wwwtech.de>
+	* src/arrayutils.[ch]: Initial commit of the array abstraction layer
+	* src/memoryutils.[ch]: Initial commit of the memory pool abstraction
+		layer
+	* src/treeutils.[ch]: Initial commit of an AVL tree implementation
+
 2010-07-15 Christian Kruse <cjk@wwwtech.de>
 	* src/utils.[ch]: Initial commit of a basic utility library
 	* conf/cforum.conf.example: added a apache style config file example
